SDKs/apis.guru/2.2.0/php/README.md
# openapi/openapi

<!-- Start SDK Installation -->
## SDK Installation

### Composer

To install the SDK first add the below to your `composer.json` file:

```json
{
    "repositories": [
        {
            "type": "github",
            "url": "<UNSET>.git"
        }
    ],
    "require": {
        "openapi/openapi": "*"
    }
}
```

Then run the following command:

```bash
composer update
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```php
<?php

declare(strict_types=1);
require_once 'vendor/autoload.php';

use \OpenAPI\OpenAPI\SDK;
use \OpenAPI\OpenAPI\Models\Operations\GetAPIRequest;

$sdk = SDK::builder()
    ->build();

try {
    $request = new GetAPIRequest();
    $request->api = '2.1.0';
    $request->provider = 'apis.guru';

    $response = $sdk->apIs->getAPI($request);

    if ($response->api !== null) {
        // handle response
    }
} catch (Exception $e) {
    // handle exception
}
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## Available Resources and Operations


### [apIs](docs/apis/README.md)

* [getAPI](docs/apis/README.md#getapi) - Retrieve one version of a particular API
* [getMetrics](docs/apis/README.md#getmetrics) - Get basic metrics
* [getProvider](docs/apis/README.md#getprovider) - List all APIs for a particular provider
* [getProviders](docs/apis/README.md#getproviders) - List all providers
* [getServiceAPI](docs/apis/README.md#getserviceapi) - Retrieve one version of a particular API with a serviceName.
* [getServices](docs/apis/README.md#getservices) - List all serviceNames for a particular provider
* [listAPIs](docs/apis/README.md#listapis) - List all APIs
<!-- End SDK Available Operations -->

### Maturity

This SDK is in beta, and there may be breaking changes between versions without a major version update. Therefore, we recommend pinning usage
to a specific package version. This way, you can install the same version each time without breaking changes unless you are intentionally
looking for the latest version.

### Contributions

While we value open-source contributions to this SDK, this library is generated programmatically.
Feel free to open a PR or a Github issue as a proof of concept and we'll do our best to include it in a future release !

### SDK Created by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
